--- a/balancing.ipynb
+++ b/balancing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,47 +61,95 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>213740</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>81033</th>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>185952</th>\n",
-       "      <td>1.0</td>\n",
+       "      <th>85374</th>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>34.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248462</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109345</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>10.0</td>\n",
@@ -109,12 +157,12 @@
        "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28866</th>\n",
+       "      <th>140742</th>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>26.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -123,62 +171,14 @@
        "      <td>...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>214216</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>252088</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>51.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>7.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -187,30 +187,30 @@
       ],
       "text/plain": [
        "       HeartDiseaseorAttack HighBP HighChol CholCheck   BMI Smoker Stroke  \\\n",
-       "213740                  1.0    0.0      0.0       1.0  21.0    1.0    0.0   \n",
-       "185952                  1.0    1.0      1.0       1.0  34.0    1.0    0.0   \n",
-       "28866                   1.0    1.0      1.0       1.0  38.0    1.0    0.0   \n",
-       "214216                  1.0    1.0      0.0       1.0  64.0    0.0    0.0   \n",
-       "252088                  1.0    1.0      0.0       1.0  51.0    0.0    0.0   \n",
+       "81033                   0.0    1.0      1.0       1.0  40.0    0.0    0.0   \n",
+       "85374                   0.0    1.0      1.0       1.0  34.0    1.0    0.0   \n",
+       "248462                  0.0    0.0      1.0       1.0  34.0    0.0    0.0   \n",
+       "109345                  1.0    1.0      1.0       1.0  28.0    1.0    1.0   \n",
+       "140742                  1.0    0.0      0.0       1.0  26.0    1.0    0.0   \n",
        "\n",
        "       Diabetes PhysActivity Fruits  ... AnyHealthcare NoDocbcCost GenHlth  \\\n",
-       "213740      0.0          1.0    1.0  ...           1.0         0.0     2.0   \n",
-       "185952      0.0          0.0    1.0  ...           1.0         0.0     4.0   \n",
-       "28866       0.0          1.0    1.0  ...           1.0         0.0     2.0   \n",
-       "214216      2.0          0.0    1.0  ...           1.0         0.0     4.0   \n",
-       "252088      1.0          0.0    1.0  ...           1.0         0.0     4.0   \n",
+       "81033       0.0          1.0    0.0  ...           1.0         0.0     2.0   \n",
+       "85374       2.0          0.0    1.0  ...           1.0         0.0     4.0   \n",
+       "248462      0.0          0.0    0.0  ...           1.0         0.0     2.0   \n",
+       "109345      2.0          0.0    0.0  ...           1.0         0.0     3.0   \n",
+       "140742      0.0          1.0    1.0  ...           1.0         0.0     4.0   \n",
        "\n",
        "       MentHlth PhysHlth DiffWalk  Sex   Age Education Income  \n",
-       "213740      2.0      0.0      0.0  1.0  10.0       6.0    6.0  \n",
-       "185952      0.0      3.0      0.0  1.0  10.0       4.0    6.0  \n",
-       "28866       0.0      2.0      0.0  1.0  11.0       6.0    8.0  \n",
-       "214216      7.0      7.0      1.0  0.0   7.0       4.0    1.0  \n",
-       "252088     30.0     30.0      1.0  1.0   6.0       6.0    7.0  \n",
+       "81033       0.0      0.0      0.0  0.0   7.0       5.0    5.0  \n",
+       "85374      30.0     30.0      0.0  0.0   3.0       3.0    4.0  \n",
+       "248462      0.0     30.0      0.0  1.0   5.0       4.0    8.0  \n",
+       "109345      0.0      4.0      0.0  1.0  10.0       4.0    6.0  \n",
+       "140742      0.0      0.0      0.0  1.0   2.0       6.0    6.0  \n",
        "\n",
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,6 +224,7 @@
     "no_disease = df.loc[df['HeartDiseaseorAttack'] == '0.0'][:25000]\n",
     "\n",
     "balanced_data = pd.concat([disease, no_disease])\n",
+    "balanced_data = balanced_data.sample(frac=1)\n",
     "\n",
     "balanced_data.head()\n",
     "\n"
