--- a/heart_disease.ipynb
+++ b/heart_disease.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,223 +18,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>HeartDiseaseorAttack</th>\n",
-       "      <th>HighBP</th>\n",
-       "      <th>HighChol</th>\n",
-       "      <th>CholCheck</th>\n",
-       "      <th>BMI</th>\n",
-       "      <th>Smoker</th>\n",
-       "      <th>Stroke</th>\n",
-       "      <th>Diabetes</th>\n",
-       "      <th>PhysActivity</th>\n",
-       "      <th>Fruits</th>\n",
-       "      <th>...</th>\n",
-       "      <th>AnyHealthcare</th>\n",
-       "      <th>NoDocbcCost</th>\n",
-       "      <th>GenHlth</th>\n",
-       "      <th>MentHlth</th>\n",
-       "      <th>PhysHlth</th>\n",
-       "      <th>DiffWalk</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Education</th>\n",
-       "      <th>Income</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>81033</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85374</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248462</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109345</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>140742</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       HeartDiseaseorAttack HighBP HighChol CholCheck   BMI Smoker Stroke  \\\n",
-       "81033                   0.0    1.0      1.0       1.0  40.0    0.0    0.0   \n",
-       "85374                   0.0    1.0      1.0       1.0  34.0    1.0    0.0   \n",
-       "248462                  0.0    0.0      1.0       1.0  34.0    0.0    0.0   \n",
-       "109345                  1.0    1.0      1.0       1.0  28.0    1.0    1.0   \n",
-       "140742                  1.0    0.0      0.0       1.0  26.0    1.0    0.0   \n",
-       "\n",
-       "       Diabetes PhysActivity Fruits  ... AnyHealthcare NoDocbcCost GenHlth  \\\n",
-       "81033       0.0          1.0    0.0  ...           1.0         0.0     2.0   \n",
-       "85374       2.0          0.0    1.0  ...           1.0         0.0     4.0   \n",
-       "248462      0.0          0.0    0.0  ...           1.0         0.0     2.0   \n",
-       "109345      2.0          0.0    0.0  ...           1.0         0.0     3.0   \n",
-       "140742      0.0          1.0    1.0  ...           1.0         0.0     4.0   \n",
-       "\n",
-       "       MentHlth PhysHlth DiffWalk  Sex   Age Education Income  \n",
-       "81033       0.0      0.0      0.0  0.0   7.0       5.0    5.0  \n",
-       "85374      30.0     30.0      0.0  0.0   3.0       3.0    4.0  \n",
-       "248462      0.0     30.0      0.0  1.0   5.0       4.0    8.0  \n",
-       "109345      0.0      4.0      0.0  1.0  10.0       4.0    6.0  \n",
-       "140742      0.0      0.0      0.0  1.0   2.0       6.0    6.0  \n",
-       "\n",
-       "[5 rows x 22 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df = pd.read_csv(\"/Users/waldosingleton/Desktop/OneDrive - The University of Auckland/3rd Year/361/ML-for-Social-Good---Group-1/heart_disease_health_indicators_BRFSS2015.csv\", skiprows=0, header=0, na_values= \"\", dtype=str)\n",
-    "\n",
+    "## Import Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"/Users/waldosingleton/Desktop/OneDrive - The University of Auckland/3rd Year/361/ML-for-Social-Good---Group-1/heart_disease_health_indicators_BRFSS2015.csv\", skiprows=0, header=0, na_values= \"\", dtype=str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Balance Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#shuffle dataframe\n",
     "df = df.sample(frac=1)\n",
     "\n",
+    "#get 25,000 random samples from each class\n",
     "disease = df.loc[df['HeartDiseaseorAttack'] == '1.0'][:25000]\n",
     "no_disease = df.loc[df['HeartDiseaseorAttack'] == '0.0'][:25000]\n",
     "\n",
+    "#concatenate the two classes\n",
     "balanced_data = pd.concat([disease, no_disease])\n",
+    "\n",
+    "#shuffle new balanced dataframe\n",
     "balanced_data = balanced_data.sample(frac=1)\n",
     "\n",
-    "balanced_data.head()\n",
-    "\n"
+    "balanced_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##"
    ]
   }
  ],
