--- a/heart_disease.ipynb
+++ b/heart_disease.ipynb
@@ -9,12 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier"
    ]
   },
   {
@@ -26,11 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/Users/waldosingleton/Desktop/OneDrive - The University of Auckland/3rd Year/361/ML-for-Social-Good---Group-1/heart_disease_health_indicators_BRFSS2015.csv\", skiprows=0, header=0, na_values= \"\", dtype=str)"
+    "df = pd.read_csv(\"heart_disease_health_indicators_BRFSS2015.csv\", skiprows=0, header=0, na_values= \"\", dtype=str)"
    ]
   },
   {
@@ -42,9 +44,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HeartDiseaseorAttack</th>\n",
+       "      <th>HighBP</th>\n",
+       "      <th>HighChol</th>\n",
+       "      <th>CholCheck</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>Smoker</th>\n",
+       "      <th>Stroke</th>\n",
+       "      <th>Diabetes</th>\n",
+       "      <th>PhysActivity</th>\n",
+       "      <th>Fruits</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AnyHealthcare</th>\n",
+       "      <th>NoDocbcCost</th>\n",
+       "      <th>GenHlth</th>\n",
+       "      <th>MentHlth</th>\n",
+       "      <th>PhysHlth</th>\n",
+       "      <th>DiffWalk</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>192016</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135061</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192761</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210464</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>560</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       HeartDiseaseorAttack HighBP HighChol CholCheck   BMI Smoker Stroke  \\\n",
+       "192016                  1.0    1.0      1.0       1.0  35.0    1.0    0.0   \n",
+       "135061                  0.0    0.0      1.0       1.0  26.0    0.0    0.0   \n",
+       "192761                  0.0    1.0      0.0       1.0  21.0    1.0    0.0   \n",
+       "210464                  1.0    1.0      1.0       1.0  25.0    1.0    0.0   \n",
+       "560                     1.0    1.0      0.0       1.0  29.0    1.0    1.0   \n",
+       "\n",
+       "       Diabetes PhysActivity Fruits  ... AnyHealthcare NoDocbcCost GenHlth  \\\n",
+       "192016      0.0          0.0    0.0  ...           1.0         0.0     4.0   \n",
+       "135061      0.0          0.0    0.0  ...           1.0         0.0     3.0   \n",
+       "192761      1.0          0.0    0.0  ...           1.0         0.0     3.0   \n",
+       "210464      0.0          1.0    1.0  ...           1.0         0.0     2.0   \n",
+       "560         2.0          1.0    0.0  ...           1.0         0.0     4.0   \n",
+       "\n",
+       "       MentHlth PhysHlth DiffWalk  Sex   Age Education Income  \n",
+       "192016      0.0      0.0      1.0  1.0  10.0       4.0    5.0  \n",
+       "135061      0.0      0.0      0.0  0.0   9.0       6.0    7.0  \n",
+       "192761      0.0      0.0      1.0  1.0  12.0       6.0    7.0  \n",
+       "210464      0.0      0.0      0.0  0.0  11.0       5.0    7.0  \n",
+       "560         0.0     30.0      1.0  0.0  10.0       3.0    1.0  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#shuffle dataframe\n",
     "df = df.sample(frac=1)\n",
@@ -60,13 +262,6 @@
     "balanced_data = balanced_data.sample(frac=1)\n",
     "\n",
     "balanced_data.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##"
    ]
   }
  ],
